plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'edu.bsu.cs222'
version '1.1.0'

repositories {
    mavenCentral()
    jcenter()
    maven {
        url 'https://repo.maven.apache.org/maven2'
    }
    maven {
        url 'https://repo.maven.apache.org/maven2/eu/hansolo/fx/countries/17.0.23/'
    }
    maven {
        url 'https://repo.maven.apache.org/maven2/org/openjfx/javafx/17.0.2/javafx-17.0.2.pom'
    }
}

ext {
    junitVersion = '5.9.1'
    javafxVersion = '13.0.2'
}

sourceCompatibility = '19'
targetCompatibility = '19'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'edu.bsu.cs222'
    mainClass = 'edu.bsu.cs222.wikipediaLoaderGUI'
}

javafx {
    javafx {
        modules = [ 'javafx.controls', 'javafx.fxml','javafx.swing','javafx.web','javafx.media' ]
        version = javafxVersion
    }
}

run {
    doFirst {
        jvmArgs = ['--module-path', "src/main/java/edu/bsu/cs222"]
        jvmArgs = ['--add-modules', 'javafx.controls,javafx.fxml,javafx.web,javafx.media,javafx.swing']
    }
}

dependencies {
    implementation 'org.controlsfx:controlsfx:11.1.2'
    implementation 'com.dlsc.formsfx:formsfx-core:11.5.0'
    implementation 'net.synedra:validatorfx:0.4.0'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
    implementation 'eu.hansolo:tilesfx:17.1.15'
    implementation 'eu.hansolo.fx:countries:17.0.23'
    implementation 'eu.hansolo.fx:heatmap:17.0.23'
    implementation 'eu.hansolo:toolbox:17.0.23'
    implementation 'eu.hansolo:toolboxfx:17.0.28'
    implementation 'org.openjfx:javafx-controls:17.0.2'
    implementation 'org.openjfx:javafx-fxml:17.0.2'
    implementation 'org.openjfx:javafx-swing:17.0.2'
    implementation 'com.google.code.gson:gson:2.10.1'
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
    implementation 'net.minidev:json-smart:2.5.0'
    implementation 'org.slf4j:slf4j-nop:2.0.9'
    implementation "org.openjfx:javafx-controls:${javafxVersion}"
    implementation "org.openjfx:javafx-fxml:${javafxVersion}"
    implementation "org.openjfx:javafx-web:${javafxVersion}"
    implementation 'com.github.almasb:fxgl:17.2'

}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}
